--- a/css/styles.css
+++ b/css/styles.css
@@ -14,3 +14,14 @@
   text-align: justify;
   font-size: x-large;
 }
+input[type=submit]{
+  width: 200px;
+  height: 30px;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: large;
+  border-radius: 10px;
+}
+input[type=submit]:hover{
+  background-color: black;
+  color: white;
+}
