--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
   padding: 30px;
   border-radius: 10px;
   width: 300px;
-  background-color: rgb(75, 126, 170);
+  background-color: gray;
   height: 300px;
   text-align: justify;
   font-size: x-large;
@@ -24,4 +24,9 @@ input[type=submit]{
 input[type=submit]:hover{
   background-color: black;
   color: white;
+}
+body{
+  background-image: url("../images/akan.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
