--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,11 @@ input [type=number]{
   border-radius: 9px;
   width: 100px;
 }
+select{
+  width: 300px;
+  height: 40px;
+  border-radius: 10px;
+}
 body{
   background-image: url("../images/akan.jpg");
   background-repeat: no-repeat;
